# TestTask

./: CMakeLists.txt  README.md
FinderNearestPoint/: CMakeLists.txt  coordinates.cpp  coordinates.h  finderDistToSegment.cpp  finderDistToSegment.h  segmentLine.h  vector.cpp  vector.h
MainProject/: CMakeLists.txt  Example3.txt  InvalidData.txt  consoleLogger.cpp  consoleLogger.h  constants.h  iLogger.h  logger.cpp  logger.h  main.cpp  parserExceptions.h  parserPoints.cpp  parserPoints.h
UnitTests/: InvalidData.txt  notEmpty.txt  testCoordinates.cpp  testFinderDistToSegment.cpp  testParserPoints.cpp  testVector.cpp
